--- a/baidu_ife/2-26/css/main.css
+++ b/baidu_ife/2-26/css/main.css
@@ -1,538 +1,1 @@
-/* line 24, ../sass/partitials/_variables.scss */
-.planet, .orbite1, .craft-model-1, .orbite2, .craft-model-2, .orbite3, .craft-model-3, .orbite4, .craft-model-4 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-}
-
-/* line 4, ../sass/partitials/_layout.scss */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-/* line 10, ../sass/partitials/_layout.scss */
-html, body {
-  width: 100%;
-  height: 100%;
-  background-color: #02071d;
-  min-width: 1280px;
-  font-family: "Microsoft YaHei", yaHei;
-}
-
-/* line 18, ../sass/partitials/_layout.scss */
-.planet {
-  width: 250px;
-  height: 250px;
-  background-color: #ec5d4a;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-/* line 28, ../sass/partitials/_layout.scss */
-.hole-1 {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: #c83b38;
-  position: relative;
-  top: 40px;
-  left: 50px;
-}
-
-/* line 28, ../sass/partitials/_layout.scss */
-.hole-2 {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  background-color: #c83b38;
-  position: relative;
-  top: 80px;
-  left: 90px;
-}
-
-/* line 28, ../sass/partitials/_layout.scss */
-.hole-3 {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  background-color: #c83b38;
-  position: relative;
-  top: 120px;
-  left: 130px;
-}
-
-/* line 39, ../sass/partitials/_layout.scss */
-#layout {
-  position: relative;
-  margin: 0 auto;
-  width: 800px;
-  height: 680px;
-}
-
-/* line 47, ../sass/partitials/_layout.scss */
-.orbite1 {
-  width: 350px;
-  height: 350px;
-}
-/* line 51, ../sass/partitials/_layout.scss */
-.orbite1 .orbite-1 {
-  width: 100%;
-  height: 100%;
-  border: 2px solid #3e4059;
-  border-radius: 50%;
-}
-
-/* line 58, ../sass/partitials/_layout.scss */
-.craft-model-1 {
-  display: none;
-  width: 360px;
-  height: 40px;
-  /*left: $basic + $i * 100px - 10px;*/
-}
-/* line 63, ../sass/partitials/_layout.scss */
-.craft-model-1 .craft-inner {
-  float: right;
-  position: relative;
-  width: 20px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: #d9e6cd;
-  text-align: center;
-  overflow: hidden;
-}
-/* line 72, ../sass/partitials/_layout.scss */
-.craft-model-1 .craft-inner span {
-  display: block;
-  position: relative;
-  line-height: 40px;
-  font-size: .75rem;
-  z-index: 9;
-  color: #02071d;
-  transform: rotate(-90deg);
-}
-/* line 81, ../sass/partitials/_layout.scss */
-.craft-model-1 .craft-inner .energy {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  background-color: #2fa06c;
-  z-index: 0;
-}
-
-/* line 47, ../sass/partitials/_layout.scss */
-.orbite2 {
-  width: 450px;
-  height: 450px;
-}
-/* line 51, ../sass/partitials/_layout.scss */
-.orbite2 .orbite-2 {
-  width: 100%;
-  height: 100%;
-  border: 2px solid #3e4059;
-  border-radius: 50%;
-}
-
-/* line 58, ../sass/partitials/_layout.scss */
-.craft-model-2 {
-  display: none;
-  width: 460px;
-  height: 40px;
-  /*left: $basic + $i * 100px - 10px;*/
-}
-/* line 63, ../sass/partitials/_layout.scss */
-.craft-model-2 .craft-inner {
-  float: right;
-  position: relative;
-  width: 20px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: #d9e6cd;
-  text-align: center;
-  overflow: hidden;
-}
-/* line 72, ../sass/partitials/_layout.scss */
-.craft-model-2 .craft-inner span {
-  display: block;
-  position: relative;
-  line-height: 40px;
-  font-size: .75rem;
-  z-index: 9;
-  color: #02071d;
-  transform: rotate(-90deg);
-}
-/* line 81, ../sass/partitials/_layout.scss */
-.craft-model-2 .craft-inner .energy {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  background-color: #2fa06c;
-  z-index: 0;
-}
-
-/* line 47, ../sass/partitials/_layout.scss */
-.orbite3 {
-  width: 550px;
-  height: 550px;
-}
-/* line 51, ../sass/partitials/_layout.scss */
-.orbite3 .orbite-3 {
-  width: 100%;
-  height: 100%;
-  border: 2px solid #3e4059;
-  border-radius: 50%;
-}
-
-/* line 58, ../sass/partitials/_layout.scss */
-.craft-model-3 {
-  display: none;
-  width: 560px;
-  height: 40px;
-  /*left: $basic + $i * 100px - 10px;*/
-}
-/* line 63, ../sass/partitials/_layout.scss */
-.craft-model-3 .craft-inner {
-  float: right;
-  position: relative;
-  width: 20px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: #d9e6cd;
-  text-align: center;
-  overflow: hidden;
-}
-/* line 72, ../sass/partitials/_layout.scss */
-.craft-model-3 .craft-inner span {
-  display: block;
-  position: relative;
-  line-height: 40px;
-  font-size: .75rem;
-  z-index: 9;
-  color: #02071d;
-  transform: rotate(-90deg);
-}
-/* line 81, ../sass/partitials/_layout.scss */
-.craft-model-3 .craft-inner .energy {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  background-color: #2fa06c;
-  z-index: 0;
-}
-
-/* line 47, ../sass/partitials/_layout.scss */
-.orbite4 {
-  width: 650px;
-  height: 650px;
-}
-/* line 51, ../sass/partitials/_layout.scss */
-.orbite4 .orbite-4 {
-  width: 100%;
-  height: 100%;
-  border: 2px solid #3e4059;
-  border-radius: 50%;
-}
-
-/* line 58, ../sass/partitials/_layout.scss */
-.craft-model-4 {
-  display: none;
-  width: 660px;
-  height: 40px;
-  /*left: $basic + $i * 100px - 10px;*/
-}
-/* line 63, ../sass/partitials/_layout.scss */
-.craft-model-4 .craft-inner {
-  float: right;
-  position: relative;
-  width: 20px;
-  height: 40px;
-  border-radius: 10px;
-  background-color: #d9e6cd;
-  text-align: center;
-  overflow: hidden;
-}
-/* line 72, ../sass/partitials/_layout.scss */
-.craft-model-4 .craft-inner span {
-  display: block;
-  position: relative;
-  line-height: 40px;
-  font-size: .75rem;
-  z-index: 9;
-  color: #02071d;
-  transform: rotate(-90deg);
-}
-/* line 81, ../sass/partitials/_layout.scss */
-.craft-model-4 .craft-inner .energy {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  background-color: #2fa06c;
-  z-index: 0;
-}
-
-/* line 94, ../sass/partitials/_layout.scss */
-.hidden {
-  display: none;
-}
-
-/* line 97, ../sass/partitials/_layout.scss */
-.visible {
-  display: block;
-}
-
-@keyframes rotating {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-/* line 109, ../sass/partitials/_layout.scss */
-.rotating {
-  animation: rotating 50s linear infinite;
-}
-
-/* line 113, ../sass/partitials/_layout.scss */
-.background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-/* line 117, ../sass/partitials/_layout.scss */
-.background [class^=planet] {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-/* line 123, ../sass/partitials/_layout.scss */
-.background .hole-4 {
-  position: absolute;
-  width: 15px;
-  height: 15px;
-  background-color: #cbd1c6;
-  border-radius: 50%;
-  top: 20px;
-  left: 20px;
-}
-/* line 132, ../sass/partitials/_layout.scss */
-.background .hole-5 {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  background-color: #999b8d;
-  border-radius: 50%;
-  top: 10px;
-  left: -5px;
-}
-/* line 141, ../sass/partitials/_layout.scss */
-.background .planet-1 {
-  top: 450px;
-  left: 300px;
-  background-color: #d9e6cd;
-  overflow: hidden;
-}
-/* line 147, ../sass/partitials/_layout.scss */
-.background .planet-2 {
-  width: 30px;
-  height: 30px;
-  top: 150px;
-  right: 350px;
-  background-color: #11a4c6;
-  overflow: hidden;
-}
-/* line 154, ../sass/partitials/_layout.scss */
-.background .planet-2 .hole-4 {
-  background-color: #1068a8;
-}
-/* line 157, ../sass/partitials/_layout.scss */
-.background .planet-2 .hole-5 {
-  background-color: #84bde7;
-}
-/* line 161, ../sass/partitials/_layout.scss */
-.background .planet-3 {
-  top: 450px;
-  right: 300px;
-  background-color: #f5a83e;
-  overflow: hidden;
-}
-/* line 166, ../sass/partitials/_layout.scss */
-.background .planet-3 .hole-4 {
-  background-color: #e0862e;
-}
-/* line 169, ../sass/partitials/_layout.scss */
-.background .planet-3 .hole-5 {
-  background-color: #e0862e;
-}
-/* line 174, ../sass/partitials/_layout.scss */
-.background .planet-4 {
-  top: 50px;
-  left: 300px;
-  background-color: #f5a83e;
-  overflow: hidden;
-}
-/* line 179, ../sass/partitials/_layout.scss */
-.background .planet-4 .hole-4 {
-  background-color: #e0862e;
-}
-/* line 182, ../sass/partitials/_layout.scss */
-.background .planet-4 .hole-5 {
-  background-color: #e0862e;
-}
-
-/* line 4, ../sass/partitials/_control.scss */
-.control {
-  flex: 7;
-  color: #d9e6cd;
-}
-/* line 7, ../sass/partitials/_control.scss */
-.control .craft-control {
-  position: relative;
-  list-style: none;
-  display: inline-block;
-  width: 70px;
-  margin: 40px 40px;
-  cursor: pointer;
-}
-/* line 14, ../sass/partitials/_control.scss */
-.control .craft-control:last-child {
-  font-size: 2rem;
-}
-/* line 17, ../sass/partitials/_control.scss */
-.control .craft-control span {
-  display: inline-block;
-  width: 60px;
-  line-height: 60px;
-  text-align: center;
-  border-radius: 50%;
-  background-color: #32a39d;
-}
-/* line 25, ../sass/partitials/_control.scss */
-.control .craft-control.selected [class*=operate] {
-  display: inline-block;
-}
-/* line 28, ../sass/partitials/_control.scss */
-.control .craft-control.hidden {
-  display: none;
-}
-/* line 32, ../sass/partitials/_control.scss */
-.control [class*=operate] {
-  display: none;
-  position: absolute;
-  list-style: none;
-}
-/* line 36, ../sass/partitials/_control.scss */
-.control [class*=operate] button {
-  width: 25px;
-  height: 25px;
-  background-color: #d1e8d6;
-  color: #32a39d;
-  border: none;
-  font-size: .75rem;
-  border-radius: 50%;
-  cursor: pointer;
-  outline: none;
-}
-/* line 47, ../sass/partitials/_control.scss */
-.control [class*=operate] [class*=forbid] {
-  opacity: .5;
-}
-/* line 51, ../sass/partitials/_control.scss */
-.control .operate-1 {
-  left: 20px;
-  top: -20px;
-}
-/* line 55, ../sass/partitials/_control.scss */
-.control .operate-2 {
-  left: 40px;
-  top: 15px;
-}
-/* line 59, ../sass/partitials/_control.scss */
-.control .operate-3 {
-  left: 20px;
-  top: 50px;
-}
-/* line 63, ../sass/partitials/_control.scss */
-.control .operates {
-  display: inline-block;
-}
-
-/* line 69, ../sass/partitials/_control.scss */
-.control-wrapper {
-  display: flex;
-  position: relative;
-  margin: 0 auto;
-  bottom: 0;
-  left: 0;
-  width: 90%;
-  height: 150px;
-  border: 2px dotted #3b3f58;
-  border-radius: 10px;
-}
-
-/* line 3, ../sass/partitials/_console.scss */
-.console {
-  flex: 3;
-  margin: 0 20px;
-  /*position: absolute;
-  left: 0;
-  bottom: 0;*/
-  bottom: 0;
-  width: 300px;
-  height: 150px;
-  padding: 0 10px;
-  line-height: 16px;
-  border-left: 2px dotted #3b3f58;
-  color: #32a39d;
-  font-size: .75rem;
-}
-/* line 17, ../sass/partitials/_console.scss */
-.console .success {
-  color: #d9e6cd;
-}
-
-@font-face {
-  font-family: "Microsoft YaHei", yaHei;
-  src: url("../../1-06/css/font/msyh.ttf");
-}
-@font-face {
-  font-family: 'Glyphicons Halflings';
-  src: url("fonts/glyphicons-halflings-regular.eot");
-  src: url("fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("fonts/glyphicons-halflings-regular.woff2") format("woff2"), url("fonts/glyphicons-halflings-regular.woff") format("woff"), url("fonts/glyphicons-halflings-regular.ttf") format("truetype"), url("fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
-}
-/* line 17, ../sass/main.scss */
-.glyphicon {
-  position: relative;
-  top: 1px;
-  display: inline-block;
-  font-family: 'Glyphicons Halflings';
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-/* line 29, ../sass/main.scss */
-.glyphicon-play:before {
-  content: "\e072";
-}
-
-/* line 32, ../sass/main.scss */
-.glyphicon-stop:before {
-  content: "\e074";
-}
-
-/* line 35, ../sass/main.scss */
-.glyphicon-trash:before {
-  content: "\e020";
-}
+.planet,.orbite1,.craft-model-1,.orbite2,.craft-model-2,.orbite3,.craft-model-3,.orbite4,.craft-model-4{position:absolute;top:0;right:0;bottom:0;left:0;margin:auto}*{margin:0;padding:0;box-sizing:border-box}html,body{width:100%;height:100%;background-color:#02071d;min-width:1280px;font-family:"Microsoft YaHei", yaHei}.planet{width:250px;height:250px;background-color:#ec5d4a;border-radius:50%;overflow:hidden}.hole-1{width:20px;height:20px;border-radius:50%;background-color:#c83b38;position:relative;top:40px;left:50px}.hole-2{width:40px;height:40px;border-radius:50%;background-color:#c83b38;position:relative;top:80px;left:90px}.hole-3{width:60px;height:60px;border-radius:50%;background-color:#c83b38;position:relative;top:120px;left:130px}#layout{position:relative;margin:0 auto;width:800px;height:680px}.orbite1{width:350px;height:350px}.orbite1 .orbite-1{width:100%;height:100%;border:2px solid #3e4059;border-radius:50%}.craft-model-1{display:none;width:360px;height:40px}.craft-model-1 .craft-inner{float:right;position:relative;width:20px;height:40px;border-radius:10px;background-color:#d9e6cd;text-align:center;overflow:hidden}.craft-model-1 .craft-inner span{display:block;position:relative;line-height:40px;font-size:.75rem;z-index:9;color:#02071d;transform:rotate(-90deg)}.craft-model-1 .craft-inner .energy{position:absolute;width:100%;height:100%;bottom:0;background-color:#2fa06c;z-index:0}.orbite2{width:450px;height:450px}.orbite2 .orbite-2{width:100%;height:100%;border:2px solid #3e4059;border-radius:50%}.craft-model-2{display:none;width:460px;height:40px}.craft-model-2 .craft-inner{float:right;position:relative;width:20px;height:40px;border-radius:10px;background-color:#d9e6cd;text-align:center;overflow:hidden}.craft-model-2 .craft-inner span{display:block;position:relative;line-height:40px;font-size:.75rem;z-index:9;color:#02071d;transform:rotate(-90deg)}.craft-model-2 .craft-inner .energy{position:absolute;width:100%;height:100%;bottom:0;background-color:#2fa06c;z-index:0}.orbite3{width:550px;height:550px}.orbite3 .orbite-3{width:100%;height:100%;border:2px solid #3e4059;border-radius:50%}.craft-model-3{display:none;width:560px;height:40px}.craft-model-3 .craft-inner{float:right;position:relative;width:20px;height:40px;border-radius:10px;background-color:#d9e6cd;text-align:center;overflow:hidden}.craft-model-3 .craft-inner span{display:block;position:relative;line-height:40px;font-size:.75rem;z-index:9;color:#02071d;transform:rotate(-90deg)}.craft-model-3 .craft-inner .energy{position:absolute;width:100%;height:100%;bottom:0;background-color:#2fa06c;z-index:0}.orbite4{width:650px;height:650px}.orbite4 .orbite-4{width:100%;height:100%;border:2px solid #3e4059;border-radius:50%}.craft-model-4{display:none;width:660px;height:40px}.craft-model-4 .craft-inner{float:right;position:relative;width:20px;height:40px;border-radius:10px;background-color:#d9e6cd;text-align:center;overflow:hidden}.craft-model-4 .craft-inner span{display:block;position:relative;line-height:40px;font-size:.75rem;z-index:9;color:#02071d;transform:rotate(-90deg)}.craft-model-4 .craft-inner .energy{position:absolute;width:100%;height:100%;bottom:0;background-color:#2fa06c;z-index:0}.hidden{display:none}.visible{display:block}@keyframes rotating{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}.rotating{animation:rotating 50s linear infinite}.background{position:absolute;width:100%;height:100%}.background [class^=planet]{position:absolute;width:40px;height:40px;border-radius:50%}.background .hole-4{position:absolute;width:15px;height:15px;background-color:#cbd1c6;border-radius:50%;top:20px;left:20px}.background .hole-5{position:absolute;width:10px;height:10px;background-color:#999b8d;border-radius:50%;top:10px;left:-5px}.background .planet-1{top:450px;left:300px;background-color:#d9e6cd;overflow:hidden}.background .planet-2{width:30px;height:30px;top:150px;right:350px;background-color:#11a4c6;overflow:hidden}.background .planet-2 .hole-4{background-color:#1068a8}.background .planet-2 .hole-5{background-color:#84bde7}.background .planet-3{top:450px;right:300px;background-color:#f5a83e;overflow:hidden}.background .planet-3 .hole-4{background-color:#e0862e}.background .planet-3 .hole-5{background-color:#e0862e}.background .planet-4{top:50px;left:300px;background-color:#f5a83e;overflow:hidden}.background .planet-4 .hole-4{background-color:#e0862e}.background .planet-4 .hole-5{background-color:#e0862e}.control{flex:7;color:#d9e6cd}.control .craft-control{position:relative;list-style:none;display:inline-block;width:70px;margin:40px 40px;cursor:pointer}.control .craft-control:last-child{font-size:2rem}.control .craft-control span{display:inline-block;width:60px;line-height:60px;text-align:center;border-radius:50%;background-color:#32a39d}.control .craft-control.selected [class*=operate]{display:inline-block}.control .craft-control.hidden{display:none}.control [class*=operate]{display:none;position:absolute;list-style:none}.control [class*=operate] button{width:25px;height:25px;background-color:#d1e8d6;color:#32a39d;border:none;font-size:.75rem;border-radius:50%;cursor:pointer;outline:none}.control [class*=operate] [class*=forbid]{opacity:.5}.control .operate-1{left:20px;top:-20px}.control .operate-2{left:40px;top:15px}.control .operate-3{left:20px;top:50px}.control .operates{display:inline-block}.control-wrapper{display:flex;position:relative;margin:0 auto;bottom:0;left:0;width:90%;height:150px;border:2px dotted #3b3f58;border-radius:10px}.console{flex:3;margin:0 20px;bottom:0;width:300px;height:150px;padding:0 10px;line-height:16px;border-left:2px dotted #3b3f58;color:#32a39d;font-size:.75rem}.console .success{color:#d9e6cd}@font-face{font-family:"Microsoft YaHei", yaHei;src:url("../../1-06/css/font/msyh.ttf")}@font-face{font-family:'Glyphicons Halflings';src:url("fonts/glyphicons-halflings-regular.eot");src:url("fonts/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"),url("fonts/glyphicons-halflings-regular.woff2") format("woff2"),url("fonts/glyphicons-halflings-regular.woff") format("woff"),url("fonts/glyphicons-halflings-regular.ttf") format("truetype"),url("fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg")}.glyphicon{position:relative;top:1px;display:inline-block;font-family:'Glyphicons Halflings';font-style:normal;font-weight:normal;line-height:1;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.glyphicon-play:before{content:"\e072"}.glyphicon-stop:before{content:"\e074"}.glyphicon-trash:before{content:"\e020"}
