--- a/plugin/transition/main.css
+++ b/plugin/transition/main.css
@@ -2,6 +2,7 @@ body {
     font-family: "Microsoft YaHei";
 }
 body, html {
+    background-color: rgb(0, 204, 174);
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -137,6 +138,7 @@ canvas {
     right: 0;
     width: 95%;
     border-radius: 10px;
+    background-color: rgb(255, 255, 255);
     -webkit-box-shadow: 0px 0px 5px rgb(46, 59, 101);
     -moz-box-shadow: 0px 0px 5px rgb(46, 59, 101);
     box-shadow: 0px 0px 5px rgb(46, 59, 101);
