--- a/baidu_ife/3-37/modal.css
+++ b/baidu_ife/3-37/modal.css
@@ -7,7 +7,6 @@ html, body {
     width: 100%;
     height: 200%;
     font-family: "Microsoft YaHei";
-    background: linear-gradient(#ceecf0, #68abb0, #7fbac4, #a1cbd8);
 }
 
 .modal {
@@ -36,21 +35,6 @@ html, body {
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    -webkit-transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1.0);
-    -moz-transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1.0);
-    -ms-transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1.0);
-    -o-transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1.0);
-    transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1.0);
-}
-
-.modal.hidden .modal-wrapper {
-    top: 30%;
-    opacity: 0;
-}
-
-.modal.show .modal-wrapper {
-    top: 50%;
-    opacity: 1;
 }
 
 .modal .close {
@@ -119,4 +103,25 @@ html, body {
     background-color: #00bfa5;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+.btn {
+    font-family: "Microsoft YaHei";
+    position: relative;
+    display: block;
+    margin: 400px auto;
+    width: 250px;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: .8rem;
+    cursor: pointer;
+}
+
+.btn-primary {
+    background-color: #00cfa5;
+}
+.btn-primary:hover {
+    background-color: #00bfa5;
 }
