--- a/baidu_ife/3-37/modal.css
+++ b/baidu_ife/3-37/modal.css
@@ -14,7 +14,7 @@ html, body {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(229, 229, 229, .6);
+    background-color: rgba(229, 229, 229, .8);
 }
 
 .modal.hidden {
@@ -27,7 +27,7 @@ html, body {
     left: 50%;
     width: 600px;
     height: 300px;
-    background-color: rgba(255, 255, 255, .5);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 10px;
     box-shadow: 0px 0px 5px #aaa;
     -webkit-transform: translate(-50%, -50%);
