--- a/baidu_ife/3-45/css/bucket.css
+++ b/baidu_ife/3-45/css/bucket.css
@@ -54,6 +54,7 @@ html, body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, .5);
 }
 .modal {
     position: fixed;
@@ -61,7 +62,7 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(55, 55, 55, .8);
     z-index: 999;
 }
 .close {
