--- a/plugin/loading/css/main.css
+++ b/plugin/loading/css/main.css
@@ -71,10 +71,10 @@ ul {
     }
 }
 .round li:first-child {
-    animation: rotation 1.2s linear infinite;
+    animation: rotation 1.2s cubic-bezier(0.42, 0, 0.58, 1.0) infinite;
 }
 .round li:last-child {
-    animation: rotationReverse 1.2s linear -0.6s infinite;
+    animation: rotationReverse 1.2s cubic-bezier(0.42, 0, 0.58, 1.0) -0.6s infinite;
 }
 .shadow li {
     height: 10px;
@@ -136,10 +136,10 @@ ul {
     }
 }
 .shadow li:first-child {
-    animation: moveLeft 1.2s linear infinite;
+    animation: moveLeft 1.2s cubic-bezier(0.42, 0, 0.58, 1.0) infinite;
 }
 .shadow li:last-child {
-    animation: moveRight 1.2s linear -0.6s infinite;
+    animation: moveRight 1.2s cubic-bezier(0.42, 0, 0.58, 1.0) -0.6s infinite;
 }
 .color1 {
     background-color: #d0ebe4;
